<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name_release">点我娱乐</string>
    <string name="app_name_debug">点我测试</string>
    <string name="black_1">已拉黑</string>
    <string name="black_2">已解除拉黑</string>
    <string name="black">拉黑</string>
    <string name="black_ing">解除拉黑</string>
    <string name="bonus_sign">立即签到</string>
    <string name="bonus_sign_1">已连续签到</string>
    <string name="bonus_day">天</string>
    <string name="beauty_init_error">美颜初始化异常，无法使用</string>
    <string name="dd">抖动</string>
    <string name="cash">提现账户</string>
    <string name="cash_account_empty">您当前还没设置提现账户</string>
    <string name="cash_add_account">添加提现账户</string>
    <string name="cash_account_type">账户类型</string>
    <string name="cash_input_bank_user_name">请输入持卡人姓名</string>
    <string name="cash_input_bank_account">请输入银行卡账号</string>
    <string name="cash_input_bank_name">请输入银行名称</string>
    <string name="cash_input_wx_account">请输入微信账号</string>
    <string name="cash_input_ali_account">请输入支付宝账号</string>
    <string name="cash_input_ali_name">请输入支付宝账号姓名</string>
    <string name="cash_type_ali">支付宝</string>
    <string name="cash_type_wx">微信</string>
    <string name="cash_type_bank">银行卡</string>
    <string name="cash_delete">是否要删除该账户？</string>
    <string name="cash_record">提现记录</string>
    <string name="coin_give">赠送</string>
    <string name="coin_balance">账户余额</string>
    <string name="coin_balance_agreement_info">我已阅读并同意</string>
    <string name="coin_balance_agreement">《用户充值协议》</string>
    <string name="coin_pay_ali">支付宝（推荐）</string>
    <string name="coin_pay_wx">微信</string>
    <string name="coin_charge_success">充值成功</string>
    <string name="coin_charge_failed">充值失败</string>
    <string name="coin_ali_not_install">未安装支付宝</string>
    <string name="coin_wx_not_install">未安装微信</string>
    <string name="copy_link">复制链接</string>
    <string name="copy_success">复制成功</string>
    <string name="edit_profile">编辑资料</string>
    <string name="edit_profile_avatar">修改头像</string>
    <string name="edit_profile_cover">直播封面</string>
    <string name="edit_profile_nickname">修改昵称</string>
    <string name="edit_profile_update_nickname">修改昵称</string>
    <string name="edit_profile_update_sign">修改签名</string>
    <string name="edit_profile_sign">修改签名</string>
    <string name="edit_profile_birthday">更改生日</string>
    <string name="edit_profile_sex">更改性别</string>
    <string name="edit_profile_city">修改位置</string>
    <string name="edit_profile_impression">我的主播印象</string>
    <string name="edit_profile_update_avatar_success">设置头像成功</string>
    <string name="edit_profile_update_cover_success">设置封面成功</string>
    <string name="edit_profile_sign_hint">留下点什么吧~</string>
    <string name="edit_profile_name_hint">请输入昵称~</string>
    <string name="edit_profile_city_hint">请输入位置~</string>
    <string name="edit_profile_sign_max">最多可输入20个字</string>
    <string name="edit_profile_name_max">最多可输入8个字</string>
    <string name="edit_profile_name_empty">请输入昵称</string>
    <string name="edit_profile_sign_empty">请输入签名</string>
    <string name="edit_profile_right_date">请选择正确的日期</string>
    <string name="follow_1">已关注</string>
    <string name="follow_2">已取消关注</string>
    <string name="follow">关注</string>
    <string name="following">已关注</string>
    <string name="follow_my_follow">关注</string>
    <string name="follow_ta_follow">关注</string>
    <string name="follow_no_follow">你还没有关注任何人</string>
    <string name="follow_do_follow">赶快去关注自己感兴趣的人吧</string>
    <string name="follow_no_follow_2">TA还没有关注任何人</string>
    <string name="fans">粉丝</string>
    <string name="fans_my_fans">粉丝</string>
    <string name="fans_ta_fans">粉丝</string>
    <string name="fans_no_fans">你还没有粉丝</string>
    <string name="fans_do_fans">完善个人信息会让更多的人关注到你哦~</string>
    <string name="fans_no_fans_2">TA还没有任何粉丝</string>
    <string name="find_pwd_forget">忘记密码</string>
    <string name="find_pwd_find">立即找回</string>
    <string name="guard_choose_duration">选择守护时长</string>
    <string name="guard_right">选择特权</string>
    <string name="guard_buy">立即开通</string>
    <string name="guard_buy_2">开通守护</string>
    <string name="guard_buy_3">续费守护</string>
    <string name="guard_my">我的</string>
    <string name="guard_guard">守护</string>
    <string name="guard_week_con">本周贡献</string>
    <string name="guard_no_data">成为TA的第一个守护</string>
    <string name="guard_tip_0">快去为喜欢的主播开通守护吧</string>
    <string name="guard_tip_1">您是当前主播的月守护\n守护日期截止到</string>
    <string name="guard_tip_2">您是当前主播的年守护\n守护日期截止到</string>
    <string name="guard_gift_tip">年守护专属礼物</string>
    <string name="guard_no_data_2">你还没有守护哦</string>
    <string name="guard_buy_tip">您为当前主播的年守护\n无法开通7天/月守护</string>
    <string name="guard_buy_tip_new">您为当前主播的年守护\n无法开通月守护</string>
    <string name="guard_buy_tip_2">您为当前主播的月守护，开通年守护将覆盖您的月守护时长，是否开通？</string>
    <string name="guard_buy_tip_3">您将花费%1$s%2$s，为主播开通%3$s</string>
    <string name="guard_name_1">7天守护</string>
    <string name="guard_name_2">月守护</string>
    <string name="guard_name_2_new">3个月守护</string>
    <string name="guard_name_3">年守护</string>
    <string name="guard_list">守护榜</string>
    <string name="guard_buy_msg">守护了主播</string>
    <string name="home_page">主页</string>
    <string name="home_page_share_1">"%1$s"也在%2$s，~点击查看TA的故事</string>
    <string name="home_page_share_2">TA有%1$s粉丝，快来围观呀！</string>
    <string name="im_live_anchor_msg">Hi~我是主播，快来和我聊天吧。</string>
    <string name="im_type_image">[图片]</string>
    <string name="im_type_voide">[语音]</string>
    <string name="im_type_location">[位置]</string>
    <string name="im_msg">消息</string>
    <string name="im_msg_ignore_unread">忽略未读</string>
    <string name="im_msg_ignore_unread_2">已忽略未读消息</string>
    <string name="im_msg_send_failed">消息发送失败</string>
    <string name="im_send_too_fast">操作频繁</string>
    <string name="im_you_are_blacked">你已经被拉黑</string>
    <string name="im_no_msg">你还没有收到任何消息</string>
    <string name="im_send_msg">发送消息...</string>
    <string name="im_input_img">图片</string>
    <string name="im_input_camera">拍摄</string>
    <string name="im_input_voice">语音输入</string>
    <string name="im_input_location">位置</string>
    <string name="im_choose_image">选择图片</string>
    <string name="im_no_image">没有找到图片</string>
    <string name="im_please_choose_image">请选择图片</string>
    <string name="im_search_location">搜索地点</string>
    <string name="im_location_failed">未获取到位置信息</string>
    <string name="im_map_not_loaded">地图未加载</string>
    <string name="im_address_failed">未获取到地址</string>
    <string name="im_get_location_failed">获取位置失败</string>
    <string name="im_follow_tip">点击关注，可及时看到对方动态</string>
    <string name="im_press_say">按住 说话</string>
    <string name="im_unpress_stop">松开 结束</string>
    <string name="im_please_say">请说话...</string>
    <string name="im_record_audio_too_short">录音时间太短</string>
    <string name="im_system_msg">系统消息</string>
    <string name="im_no_sys_msg">暂无系统消息</string>
    <string name="im_pri_chat">私聊</string>
    <string name="impress">主播印象</string>
    <string name="impress_add">添加印象</string>
    <string name="impress_add_max">最多添加三个印象</string>
    <string name="impress_please_choose">请选择印象</string>
    <string name="impress_not_changed">未修改印象</string>
    <string name="impress_tip">请选择你对主播的印象</string>
    <string name="impress_tip_2">你收到的主播印象</string>
    <string name="impress_tip_3">你还暂时没有收到主播印象</string>
    <string name="img_camera_cancel">取消拍照</string>
    <string name="img_alumb_cancel">取消选择</string>
    <string name="img_crop_cancel">取消裁剪</string>
    <string name="login_phone_tip">手机号登录</string>
    <string name="login_register_tip">注册</string>
    <string name="login_register_failed">注册失败</string>
    <string name="login_tip_1">注册或登录，即代表您已同意</string>
    <string name="login_tip_2">《用户协议》</string>
    <string name="login_other_type">其他登录方式</string>
    <string name="login_tip_3">注册登录后体验更精彩!</string>
    <string name="login_input_phone">请输入手机号码</string>
    <string name="login_input_pwd">请输入密码</string>
    <string name="login_immediately_login">立即登录</string>
    <string name="login_ing">登录中</string>
    <string name="login_immediately_register">立即注册</string>
    <string name="login_forget_pwd">忘记密码</string>
    <string name="login_phone_error">请输入正确的手机号码</string>
    <string name="login_auth_ing">正在授权登录</string>
    <string name="login_auth_success">登录成功</string>
    <string name="login_auth_failure">授权失败</string>
    <string name="login_auth_cancle">授权取消</string>
    <string name="login_confirm">登录</string>
    <string name="live_no_follow">你还没有发布动态</string>
    <string name="live_do_follow">赶快去发布自己的动态吧</string>
    <string name="live_no_follow_2">还没有人发布动态</string>
    <string name="live_do_follow_2">赶快去发布自己的动态吧</string>
    <string name="live">动态</string>
    <string name="live_anchor">主播</string>
    <string name="live_start">开始直播</string>
    <string name="live_room_type">选择房间类型</string>
    <string name="live_share_to">分享到</string>
    <string name="live_cover">直播封面</string>
    <string name="live_cover_2">更换封面</string>
    <string name="live_title">直播标题</string>
    <string name="live_title_hint">给你的直播写个标题吧</string>
    <string name="live_class">频道</string>
    <string name="live_class_choose">选择直播频道</string>
    <string name="live_class_tip">注意选择适合自己的频道。直播过程中，若运营人员发现选择的频道和直播内容不相符的情况，会调整您的直播频道。</string>
    <string name="live_set_pwd">请设置房间密码</string>
    <string name="live_set_fee">请设置收费金额</string>
    <string name="live_set_pwd_empty">请设置房间密码</string>
    <string name="live_set_fee_empty">请设置收费金额</string>
    <string name="live_time_fee">收费金额</string>
    <string name="live_time_fee_info_1">选择收费:</string>
    <string name="live_time_fee_info_2">/分钟</string>
    <string name="live_choose_charge">选择收费</string>
    <string name="live_end_live">是否要结束直播？</string>
    <string name="live_beauty">美颜</string>
    <string name="live_camera">翻转</string>
    <string name="live_flash">闪光灯</string>
    <string name="live_music">音乐</string>
    <string name="live_share">分享</string>
    <string name="live_message">消息</string>
    <string name="live_wish">心愿单</string>
    <string name="live_game">游戏</string>
    <string name="live_red_pack">红包</string>
    <string name="live_link_mic">PK</string>
    <string name="live_open_flash">只有后置摄像头才能开启闪光灯</string>
    <string name="live_open_flash_error">打开闪光灯失败</string>
    <string name="live_you_are_shut">你已经被禁言</string>
    <string name="live_end">直播已结束</string>
    <string name="live_back">返回首页</string>
    <string name="live_duration">直播时长</string>
    <string name="live_watch_num">观看人数</string>
    <string name="live_end_ing">关播中</string>
    <string name="live_say_something">和大家说点什么...</string>
    <string name="live_open_alba">开启弹幕，</string>
    <string name="live_contribute">礼物贡献榜</string>
    <string name="main_list_day">日榜</string>
    <string name="main_list_week">周榜</string>
    <string name="main_list_month">月榜</string>
    <string name="main_list_all">总榜</string>
    <string name="music_search">搜索歌曲名称</string>
    <string name="music_no_local_music">暂无下载</string>
    <string name="reg_input_phone">请输入手机号</string>
    <string name="reg_input_code">请输入验证码</string>
    <string name="reg_input_pwd_1">请输入密码</string>
    <string name="reg_input_pwd_1_info">密码由6-20位数字和字母组成</string>
    <string name="reg_register_and_login">确定</string>
    <string name="reg_get_code">获取验证码</string>
    <string name="search">搜索</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="pri_msg">私信</string>
    <string name="trend_share_title">分享至:</string>
    <string name="trend_share_qq">QQ</string>
    <string name="trend_share_weixin">微信</string>
    <string name="wish_add_title">今日直播心愿</string>
    <string name="wish_add_info_2">当日设置的心愿，会在当天24:00失效</string>
    <string name="wish_add_button1">+添加心愿</string>
    <string name="wish_add_button2">生成心愿</string>
</resources>