<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_shadow"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:gravity="center_horizontal"
        android:text="@string/live_time_fee"
        android:textColor="@color/textColor2New"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="17dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/live_time_fee_info_1"
            android:textColor="@color/textColor2New"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/content"
            android:layout_width="60dp"
            android:layout_height="26dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/bg_dialog_input"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="8"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textColor="@color/textColor2New"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvFeeInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/live_time_fee_info_2"
            android:textColor="@color/textColor2New"
            android:textSize="13sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/textColorD" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">


        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/violetTxt"
            android:textSize="14sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/textColorD" />

        <TextView
            android:id="@+id/btn_confirm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/violetTxt"
            android:textSize="14sp" />

    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:padding="15dp"
        android:visibility="gone">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </FrameLayout>

</LinearLayout>