<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutContribute"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@drawable/bg_title">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:paddingTop="30dp"
            android:text="@string/live_contribute"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="3dp"
            android:padding="9dp"
            android:src="@mipmap/icon_back_white"
            android:tint="@color/white" />

    </RelativeLayout>

    <com.tongchuang.phonelive.custom.MyFrameLayout1
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="14dp">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/btn_con_day"
                android:layout_width="60dp"
                android:layout_height="26dp"
                android:background="@drawable/bg_list_btn_2"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:text="@string/main_list_day"
                android:textColor="@color/bg_list_btn_txt_color_2"
                android:textSize="14sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/btn_con_week"
                android:layout_width="60dp"
                android:layout_height="26dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/bg_list_btn_2"
                android:button="@null"
                android:gravity="center"
                android:text="@string/main_list_week"
                android:textColor="@color/bg_list_btn_txt_color_2"
                android:textSize="14sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/btn_con_month"
                android:layout_width="60dp"
                android:layout_height="26dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/bg_list_btn_2"
                android:button="@null"
                android:gravity="center"
                android:text="@string/main_list_month"
                android:textColor="@color/bg_list_btn_txt_color_2"
                android:textSize="14sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/btn_con_all"
                android:layout_width="60dp"
                android:layout_height="26dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/bg_list_btn_2"
                android:button="@null"
                android:gravity="center"
                android:text="@string/main_list_all"
                android:textColor="@color/bg_list_btn_txt_color_2"
                android:textSize="14sp"
                android:textStyle="bold" />

        </RadioGroup>
    </com.tongchuang.phonelive.custom.MyFrameLayout1>

</LinearLayout>