<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gameWhite"
    android:orientation="vertical"
    android:paddingBottom="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="46dp">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:padding="9dp"
            android:src="@mipmap/icon_game_back"
            android:tint="@color/gameTextColor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/wish_add_title"
            android:textColor="@color/gameTextColor"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gameGray" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="158dp"
        android:overScrollMode="never" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/wish_add_info_2"
        android:textColor="#ffbcbcbc"
        android:textSize="13sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="13dp"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tvAdd"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@drawable/bg_wish_add_button1"
                android:gravity="center"
                android:minWidth="107dp"
                android:text="@string/wish_add_button1"
                android:textColor="#ff33d8ef"
                android:textSize="14sp" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tvGenerate"
                android:layout_width="107dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@drawable/bg_wish_add_button2"
                android:gravity="center"
                android:text="@string/wish_add_button2"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </FrameLayout>
    </LinearLayout>
</LinearLayout>